--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -98,6 +98,7 @@ aman:
   name: Aman Tanvir
   section: phd
   linkedin: amantanvir
+  current: True
 taha:
   username: trsiddiqui
   name: Taha Rehman Siddiqui
