--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -87,9 +87,9 @@ akul:
   section: undergrad
   current: False
   linkedin: akul1507
-yuaqing:
-  username: yuama
-  name: Yuaqing Ma
+yuqing:
+  username: yuma
+  name: Yuqing Ma
   bio: "Mitacs Global Link Research Intern: Summer 2019"
   section: undergrad
   current: True
