Added Jacklyn's photo

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -93,6 +93,7 @@ yuqing:
   bio: "Mitacs Global Link Research Intern: Summer 2019"
   section: undergrad
   current: True
+  picture: assets/images/people/yuqing.jpg
 aman:
   username: amantanvir
   name: Aman Tanvir
