Bugfix in papers data file

--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -1,6 +1,6 @@
 _2019:
   - title: "GloBug: Using Global Data in Fault Localization"
-    link: -
+    link: "-"
     venue: TBA
     authors:
       - TBA
