--- a/_data/papers.yml
+++ b/_data/papers.yml
@@ -16,9 +16,10 @@ _2020:
       that our approach improves their performance by up to 102%, in terms of finding state change points, measured by F1 score. 
       We also showed that our state classification algorithm provides on average 90.45% F1 score, which improves traditional 
       classification algorithms by up to 17%.
-    venue: TBA
+    venue: ASE 2020
     authors:
-      - TBA
+      - Mohammad Jafar Mashhadi
+      - Hadi Hemmati
 _2019:
   - title: "GloBug: Using Global Data in Fault Localization"
     link: "-"
