--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -69,7 +69,7 @@ shayan:
   current: True
   picture: assets/images/people/shayan.jpg
   linkedin: shayanzamani
-mj:
+mjafar:
   username: mjafar
   name: Mohammad Jafar Mashhadi
   url: mjafar.me
