--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -14,7 +14,7 @@ armin:
   name: Armin Zirak
   bio: Masters student in Software Engineering
   long_bio: |
-      Armin is an MSc student at University of Calgary who is interested in Machine Learning Engineering. His research is mainly on the challenges of bringing deep learning models in software. For example, he tries to find automated and efficient hyper-parameter tuning methods, develop tools for debugging deep neural networks, and analyze them in terms of robustness. Before his graduate studies, he was a data scientist at the largest advertising platform in Iran and received a bachelor's degree from University of Tehran.
+      Armin is an MSc student at University of Calgary who is interested in Machine Learning Engineering and Data Science. He is now working on Robust AI/DL. Before, he received his bachelor's degree from University of Tehran.
   picture: assets/images/people/armin.jpg
   section: masters
   current: True
